--- a/about.html
+++ b/about.html
@@ -88,8 +88,8 @@
             </div>
             <div class="footer-section">
                 <h3>Contact Us</h3>
-                <p>Email: info@ecolife.com</p>
-                <p>Phone: (555) 123-4567</p>
+                <p>Email: wachiraerick@gmail.com</p>
+                <p>Phone: (+254)796 093 406</p>
             </div>
         </div>
         <div class="footer-bottom">
